[#16882] Leaderboard information hover card alignment issue in RTL languages.

--- a/public/src/page/realtime_dashboard/realtime_dashboard.scss
+++ b/public/src/page/realtime_dashboard/realtime_dashboard.scss
@@ -319,7 +319,7 @@
         display: inline-block;
         position: relative;
       }
-      .trophy{ left: 10px;}
+      .trophy{ @include left(10px);}
       .preview_pic{
         @include size(34px, 34px);
         top: 4px;
